--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,7 +1,10 @@
 $nightSkyBlue: #100040;
+$dimDark: #111;
 $asbestosGrey: #7f8c8d;
+$electromagneticGray: #2f3640;
 $nephritisGreen: #27ae60;
 $tomatoRed: #eb2f06;
+$cloudWhite: #ecf0f1;
 $darkSapphire: #0c2461;
 $lightSapphire: #1e3799;
 
@@ -27,20 +30,20 @@ $gameHeight: 600px;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     text-decoration: none;
-    background-color: $darkSapphire;
+    background-color: $asbestosGrey;
     color: $color;
-    border: 1px solid $lightSapphire;
+    border: 1px solid $electromagneticGray;
     border-radius: 20px;
     transition: all 0.3s ease 0s;
 }
 
 @mixin buttonHover($color) {
     &:hover {
-        background-color: $lightSapphire;
-        color: $color;
+        background-color: $color;
+        color: $electromagneticGray;
         cursor: pointer;
         transform: translateY(-2px);
-        box-shadow: 0px 8px 12px rgba(12, 36, 97, 1.0);
+        box-shadow: 0px 4px 8px $color;
     }
 
     &:active {
@@ -56,7 +59,7 @@ $gameHeight: 600px;
 }
 
 body {
-    background-color: $nightSkyBlue;
+    background-color: $dimDark;
 }
 
 
