--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -24,7 +24,7 @@ $gameHeight: 600px;
     height: $gameHeight;
 }
 
-@mixin buttonStyle($color) {
+@mixin buttonStyle($color, $borderColor) {
     width: 150px;
     height: 40px;
     font-family: 'Roboto', sans-serif;
@@ -32,7 +32,7 @@ $gameHeight: 600px;
     text-decoration: none;
     background-color: $asbestosGrey;
     color: $color;
-    border: 1px solid $electromagneticGray;
+    border: 1px solid $borderColor;
     border-radius: 20px;
     transition: all 0.3s ease 0s;
 }
