--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -28,7 +28,7 @@ $gameHeight: 600px;
     width: 150px;
     height: 40px;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 2rem;
     text-decoration: none;
     background-color: $asbestosGrey;
     color: $color;
@@ -38,7 +38,7 @@ $gameHeight: 600px;
 }
 
 @mixin buttonHover($color) {
-    &:hover {
+    &:hover:enabled {
         background-color: $color;
         color: $electromagneticGray;
         cursor: pointer;
@@ -46,9 +46,16 @@ $gameHeight: 600px;
         box-shadow: 0px 4px 8px $color;
     }
 
-    &:active {
+    &:active:enabled {
         box-shadow: none;
         transform: translateY(-1px);
+    }
+
+    &:disabled {
+        background-color: $electromagneticGray;
+        color: $cloudWhite;
+        cursor: default;
+        box-shadow: none;
     }
 }
 
@@ -62,4 +69,6 @@ body {
     background-color: $dimDark;
 }
 
-
+html {
+    font-size: 62.5%;
+}
