--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,14 +3,13 @@
 
 .splash-screen {
     @include flexCenter();
-    z-index: 1;
 }
 
 .splash-title {
     color: $asbestosGrey;
     font-weight: 500;
-    font-size: 28px;
-    letter-spacing: 15px;
+    font-size: 2.8rem;
+    letter-spacing: 1.5rem;
     text-transform: uppercase;
     animation: slideUpward 1.5s forwards;
     animation-delay: 1s;
@@ -31,8 +30,8 @@
 
 .cross-container {
     display: inline-block;
-    font-size: 28px;
-    transform: translateX(-5px);
+    font-size: 2.8rem;
+    transform: translateX(-.5rem);
 }
 
 .spinning-cross {
@@ -70,7 +69,7 @@
         padding: 10px;
     }
 
-    .menu-btn {
+    .game-btn {
         @include buttonStyle($cloudWhite, $nephritisGreen);
 
         @include buttonHover($nephritisGreen);
